[project]
name = "taskiq-sqlalchemy"
version = "0.1.1"
description = "SQLAlchemy integration for taskiq"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["sqlalchemy>=2.0.49", "taskiq>=0.12.2"]
keywords = ["taskiq", "sqlalchemy", "tasks", "broker", "result_backend"]

[project.urls]
Repository = "https://github.com/theankurman/taskiq-sqlalchemy"

[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.12"]


[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "cryptography>=47.0.0",
    "psycopg[binary]>=3.3.3",
    "pymssql>=2.3.13",
    "pymysql>=1.1.2",
    "pytest>=9.0.3",
    "testcontainers>=4.14.2",
]

[tool.pytest]
pythonpath = ["src"]
anyio_mode = "auto"


[tool.ruff.lint]
extend-select = ["I"]
